# kafka-rs

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  Makefile  PR_SUMMARY.md  README.md  README_initial.md  create_topics.js  debug_metadata.js  package-lock.json  rustfmt.toml
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  client-behavior.md  development-workflow.md  domain-model.md  examples.md  getting-started.md  kafka-internals.md  learning-outcomes.md  protocol.md
integration/kafka-client-test/: README.md  create-topics.js  debug-consumer.js  debug-metadata.js  debug-producer.js  kafka-client.js  package-lock.json  package.json  test.js
integration/kafka-client-test/utils/: create-topics.js  debug-metadata.js  logger.js
scripts/: format.sh  pre-commit.sh
src/: lib.rs  main.rs
src/application/: dto.rs  mod.rs  use_cases.rs
src/domain/: entities.rs  errors.rs  events.rs  mod.rs  repositories.rs  services.rs  value_objects.rs
src/infrastructure/: mod.rs  persistence.rs  protocol.rs  server.rs
tests/: integration_tests.rs
